RJ-2024-011 remove blue text from PDF

--- a/_articles/RJ-2024-011/BMRMM_Package.tex
+++ b/_articles/RJ-2024-011/BMRMM_Package.tex
@@ -70,10 +70,10 @@ providing inferences for both Bayesian Markov renewal or non-renewal models as n
 The \pkg{BMRMM} package conveniently includes a synthetic \code{foxp2} data set that describes the laboratory study on the role of the FoxP2 gene implicated in speech deficiencies for adult mice,  which is also the motivating application for the methodology of BMMMs and BMRMMs.  
 Mutations in the FoxP2 gene have long been associated with  severe deficits in vocal communication for mammals  \citep{macdermot2005identification}. 
 Mice with and without the mutation singing under various "social contexts" have thus been studied in many experiments \citep{Fujita_etal:2008,Castellucci_etal:2016,Gaub_etal:2016,Chabout_etal:2016}. 
-\colblue{The FoxP2 data set \citep{Chabout_etal:2016}, e.g., comprises the sequences of syllables making up the songs as well as the lengths of inter-syllable intervals (ISIs). 
+The FoxP2 data set \citep{Chabout_etal:2016}, e.g., comprises the sequences of syllables making up the songs as well as the lengths of inter-syllable intervals (ISIs). 
 %,  which can both serve as indicators of potential vocal impairment. 
 The data set \code{foxp2} included in the \pkg{BMRMM} package is taken from the simulation study of \cite{wu2021bayesian}. 
-It is much shorter than the real FoxP2 data set but closely mimics its other aspects and is used} in this paper to demonstrate how to obtain detailed inferences for both syllable transitions and ISI dynamics for a comprehensive analysis of the vocal repertoire in mice with and without the FoxP2 mutation.
+It is much shorter than the real FoxP2 data set but closely mimics its other aspects and is used in this paper to demonstrate how to obtain detailed inferences for both syllable transitions and ISI dynamics for a comprehensive analysis of the vocal repertoire in mice with and without the FoxP2 mutation.
 
 
 {The utility of the \pkg{BMRMM} package goes well beyond the FoxP2 data set. % which had originally motivated the research on BM(R)MMs in \cite{sarkar2018bayesian} and \cite{wu2021bayesian}. 
@@ -113,11 +113,11 @@ Some R packages provide the inference of hidden semi-Markov models,   such as  \
  
 %We summarize the technical details of BMRMMs in Section~\ref{sec:models}.  In Section~\ref{sec:func}, we document the main functions of the \pkg{BMRMM} package.  We then demonstrate our package in analyzing the FoxP2 data set and the asthma control data set in Section~\ref{sec:foxp2} and \ref{sec:asthma}, respectively, and conclude in Section~\ref{sec:end}. 
 
-\colblue{In the following section, we summarize the technical details of BMRMMs. 
+In the following section, we summarize the technical details of BMRMMs. 
 Documentation for the functions of the  \pkg{BMRMM} package is then provided. 
 Next, we demonstrate the usage of our package in analyzing two different data sets. 
 The final section contains some concluding remarks.
-}
+
 
 
 \vspace*{-6pt}
@@ -174,11 +174,11 @@ The coefficients of the convex combination, namely, $\{\pi_{trans,0}^{(i)}(y_{t-
 
 For each covariate $j=1,\dots,p$, 
 {it is possible that some covariate levels exert a similar effect on the transition dynamics. 
-\colblue{For example, the components $\blambda_{trans,x_1=1,x_2,\dots,x_p}(\cdot\mid y_{t-1})$ and $\blambda_{trans,x_1=2,x_2,\dots,x_p}(\cdot\mid y_{t-1})$ would be equal if levels 1 and 2 of covariate 1 have similar influences on transition dynamics for fixed levels for covariates $2, \dots, p$.} 
+For example, the components $\blambda_{trans,x_1=1,x_2,\dots,x_p}(\cdot\mid y_{t-1})$ and $\blambda_{trans,x_1=2,x_2,\dots,x_p}(\cdot\mid y_{t-1})$ would be equal if levels 1 and 2 of covariate 1 have similar influences on transition dynamics for fixed levels for covariates $2, \dots, p$. 
 A clustering mechanism for covariate levels allows the fixed component $\blambda_{trans,x_1,\dots,x_p}(\cdot\mid y_{t-1})$ to be the same for all levels with a similar influence.}
 In particular, for covariate $j$, we construct the partition $\C_{trans}^{(j)}=\{\C_{trans,h_{j}}^{(j)}\}_{h_{j}=1}^{k_{trans,j}}$ of its levels, where $k_{trans,j}$ is the number of clusters for covariate $j$ and $h_j$ represents the cluster index.
 We introduce latent variables $\{z_{trans,j,\ell}\}_{j=1,\ell=1}^{p,d_{j}}$ that indicate the cluster index for the $\ell\th$ label of covariate $j$.
-\colblue{Two levels of the covariate $j$, $\ell_1, \ell_2 \in \X_j = \{1,\dots,d_j\}$, are clustered together if and only if $z_{trans,j,\ell_1} = z_{trans,j,\ell_2}$.} 
+Two levels of the covariate $j$, $\ell_1, \ell_2 \in \X_j = \{1,\dots,d_j\}$, are clustered together if and only if $z_{trans,j,\ell_1} = z_{trans,j,\ell_2}$. 
 {For the fixed effects, we then replace the covariate levels $x_1,\dots,x_p$'s with cluster indices $h_1,\dots,h_p$'s and   present the fixed effect as  $\blambda_{trans,h_{1},\dots,h_{p}}(\cdot\mid y_{t-1})$. }
 
 {We set Dirichlet priors for both fixed and individual effect components and let them center around the same mean vector $\blambda_{trans,0}$ to facilitate posterior computation. 
@@ -270,9 +270,9 @@ the complete Bayesian hierarchical model for the {continuous duration times} as
 \ee
 
 
-{Inference is based on samples drawn from the posterior using a \colblue{Metropolis-Hastings-within-Gibbs MCMC algorithm. 
+{Inference is based on samples drawn from the posterior using a Metropolis-Hastings-within-Gibbs MCMC algorithm. 
 Most full conditionals are available in closed form and can be directly sampled from. 
-A Metropolis-Hastings step is however used for updating the discrete valued cluster configurations.} 
+A Metropolis-Hastings step is however used for updating the discrete valued cluster configurations. 
 %Otherwise, full conditional posterior distributions are derived and sampled using Gibbs.
 There is, however, no conjugate prior for gamma distributions with unknown shape parameters \citep{damsleth1975conjugate}. 
 Recently, \citet{miller2019fast} designed a procedure that efficiently approximates the posterior full conditionals of gamma shape parameters under a gamma prior with another gamma density. 
@@ -284,8 +284,8 @@ We adopt this approximation in our MCMC algorithm. }
 
 The \pkg{BMRMM} package is developed to implement Bayesian Markov (renewal) mixed models. 
 The main function \code{BMRMM} of the package carries out detailed analyses of the state transitions and their {duration times} (if applicable) as described in the previous section.
-\colblue{Moreover,  the package includes a number of supplementary functions that use the results of the main function to produce numerical summaries, visualizations, and diagnostics.  
-Table~\ref{tab:fn} provides a brief description of all functions. }
+Moreover,  the package includes a number of supplementary functions that use the results of the main function to produce numerical summaries, visualizations, and diagnostics.  
+Table~\ref{tab:fn} provides a brief description of all functions. 
 
 %\textit{Data Format}
 
@@ -335,13 +335,13 @@ BMRMM(data, num.cov, cov.labels = NULL, state.labels = NULL,
       simsize = 10000, burnin = simsize/2)
 \end{example}
 
-\colblue{The parameter \code{data} specifies the target data set and  needs to follow a certain structure. } 
+The parameter \code{data} specifies the target data set and  needs to follow a certain structure.  
 The first column should list the individual IDs $i_{s}$, followed by $p$ columns for the values of the $p$ associated covariates $x_{s,j}$, 
 then two columns for the values of the previous state $y_{s,t-1}$, the current state $y_{s,t}$, and finally a column for {duration times} $\tau_{s,t}$.
 {The package supports {one to five} categorical covariates that take on values ${1,2,\dots}$.} 
 The {duration times} column is optional if the user would like to use BMMM instead of BMRMM to analyze just the state transitions.
 This is shown in Table~\ref{tab:data-cols}.  
-The users can look at the included \colblue{simulated data set} \code{foxp2}  as an example.
+The users can look at the included simulated data set \code{foxp2}  as an example.
 
 \begin{table}[h]
     \centering
@@ -353,41 +353,41 @@ The users can look at the included \colblue{simulated data set} \code{foxp2}  as
     \label{tab:data-cols}
 \end{table}
 
-\colblue{The number of covariates in the data set is specified by the argument \code{num.cov}.
+The number of covariates in the data set is specified by the argument \code{num.cov}.
 The argument \code{cov.labels} is a list of vectors giving the names of covariate levels in the covariate order that is presented in \code{data} while the parameter \code{state.labels} is a  vector providing the names of the transition states. 
 The default labels are Arabic numerals.
-} 
-{The \colblue{\code{random.effect}} parameter gives users the option to exclude the random individual effects. 
-If \colblue{\code{random.effect}} is set to \code{FALSE}, the transition probabilities (and the mixture probabilities for {duration times}, if applicable) will only consider the influence of the covariate levels.} 
-Similarly, the \colblue{\code{fixed.effect}} parameter allows users to exclude the fixed population effects. 
-\colblue{The default values for \code{random.effect} and \code{fixed.effect} are both \code{TRUE}.}
+ 
+{The \code{random.effect} parameter gives users the option to exclude the random individual effects. 
+If \code{random.effect} is set to \code{FALSE}, the transition probabilities (and the mixture probabilities for {duration times}, if applicable) will only consider the influence of the covariate levels.} 
+Similarly, the \code{fixed.effect} parameter allows users to exclude the fixed population effects. 
+The default values for \code{random.effect} and \code{fixed.effect} are both \code{TRUE}.
 The covariate indices for the two analyses can be specified by setting \code{trans.cov.index} and  \code{duration.cov.index}. 
-\colblue{We note that indices specified by \code{trans.cov.index} and  \code{duration.cov.index} refer to the index of the covariate when the first covariate is given index 1,  thus different from its index in \code{data}.}
+We note that indices specified by \code{trans.cov.index} and  \code{duration.cov.index} refer to the index of the covariate when the first covariate is given index 1,  thus different from its index in \code{data}.
 
-\colblue{Users can define \code{duration.distr} in the following three ways.} 
+Users can define \code{duration.distr} in the following three ways. 
 
 \begin{enumerate}
-\item \colblue{If users set \code{duration.distr} to be \code{NULL},  which is the default setting,  then the duration times will be ignored and not modeled at all. } 
+\item If users set \code{duration.distr} to be \code{NULL},  which is the default setting,  then the duration times will be ignored and not modeled at all.  
 The BMMM described will be implemented to analyze the existing state transitions alone. 
 
-\item \colblue{If \code{duration.distr} is set as \code{list(`mixDirichlet', unit)},  the duration times will be used to construct a new state \code{`dur.state'}, which will be analyzed along with the original set of states. }
+\item If \code{duration.distr} is set as \code{list(`mixDirichlet', unit)},  the duration times will be used to construct a new state \code{`dur.state'}, which will be analyzed along with the original set of states. 
 The additional argument \code{unit} must be defined and acts both as a threshold and as a block size for {duration times}. 
 For example, if the \code{unit} is set to $5$, then for each {duration} value greater than $5$ units, each block of $5$ unit in it will be treated as an instance of a new \code{'dur.state'} state. 
-\colblue{If there is a state transition from state \code{`a'} to \code{`b'} with a duration time of $15$ seconds and the \code{unit} is specified at $5$ seconds,  then the updated Markov sequence will contain three consecutive \code{`dur.state'} states, i.e.,  \code{(`a',  `dur.state', `dur.state', `dur.state', `b')}.  }
+If there is a state transition from state \code{`a'} to \code{`b'} with a duration time of $15$ seconds and the \code{unit} is specified at $5$ seconds,  then the updated Markov sequence will contain three consecutive \code{`dur.state'} states, i.e.,  \code{(`a',  `dur.state', `dur.state', `dur.state', `b')}.  
 {Since we adopt the floor operation,  a {duration time} of say $17.68$ seconds will also be replaced by three consecutive instances of \code{'dur.state'} states in this example.}  
 The BMMM model  will then be implemented to analyze the resulting appended state transitions. 
 
 
 These first two options may naturally result in loss of information and is therefore not recommended when a detailed analysis of the distribution of the {duration times} is warranted. 
 
-\item \colblue{If \code{duration.distr} is set to be \code{list(`mixgamma', shape, rate)},  the duration times are modeled as a continuous random variable using a flexible mixture of gamma kernels, as described for a BMRMM model.} 
+\item If \code{duration.distr} is set to be \code{list(`mixgamma', shape, rate)},  the duration times are modeled as a continuous random variable using a flexible mixture of gamma kernels, as described for a BMRMM model. 
 In this case,  users can specify the prior shape and rate parameters with the \code{shape} and  \code{rate} arguments within the definition of \code{duration.distr}. 
 We note that \code{shape} and  \code{rate} must be numeric vectors of the same length. 
 \end{enumerate}
 
-By default, we consider the previous state $y_{s,t-1}$ as a covariate when we model the {duration times} as continuous variables, i.e.,  \colblue{\code{duration.incl.prev.state}} is set to \code{TRUE}. 
+By default, we consider the previous state $y_{s,t-1}$ as a covariate when we model the {duration times} as continuous variables, i.e.,  \code{duration.incl.prev.state} is set to \code{TRUE}. 
 Users can set this parameter to \code{FALSE} if they wish to exclude the previous state when analyzing the {duration times}.
-\colblue{The remaining parameters \code{simsize} and \code{burnin} denote the total number of MCMC iterations and the number of burn-ins, respectively. }
+The remaining parameters \code{simsize} and \code{burnin} denote the total number of MCMC iterations and the number of burn-ins, respectively. 
 
 
 
@@ -401,14 +401,14 @@ Users can set this parameter to \code{FALSE} if they wish to exclude the previou
        Argument  & Explanation & Default value \\\midrule
     \code{data} & the data set to be used following the required format & \\ 
          \code{num.cov} &  an integer giving the number of observed covariates in \code{data} & \\
-                  \colblue{\code{cov.labels}} & a list of vectors giving names of all covariate levels &  \colblue{\code{NULL}} \\
-                  \colblue{\code{state.labels}} &  a vector giving names of the states &  \colblue{\code{NULL}} \\
-         \colblue{\code{random.effect}} &  \code{TRUE} if random individual effects are included &  \colblue{\code{TRUE}} \\
-                  \colblue{\code{fixed.effect}} &  \code{TRUE} if fixed population effects are included &  \colblue{\code{TRUE}} \\
+                  \code{cov.labels} & a list of vectors giving names of all covariate levels &  \code{NULL} \\
+                  \code{state.labels} &  a vector giving names of the states &  \code{NULL} \\
+         \code{random.effect} &  \code{TRUE} if random individual effects are included &  \code{TRUE} \\
+                  \code{fixed.effect} &  \code{TRUE} if fixed population effects are included &  \code{TRUE} \\
          \code{trans.cov.index} & selects the covariates to analyze for transition probabilities & \code{1:num.cov} \\
           \code{duration.cov.index} &   selects the covariates to analyze for duration times &  \code{1:num.cov} \\
                   \code{duration.distr} &   specifies the distribution for duration times & \code{NULL} \\
-    \colblue{\code{duration.incl.prev.state}} & \code{TRUE} if $y_{t-1}$ acts as a covariate for the analysis of duration times  & \colblue{\code{TRUE}}\\
+    \code{duration.incl.prev.state} & \code{TRUE} if $y_{t-1}$ acts as a covariate for the analysis of duration times  & \code{TRUE}\\
    \code{simsize} &  number of MCMC iterations & 10000\\
    \code{burnin} &  number of burnins of the MCMC algorithm &  \code{simsize}/2\\\bottomrule
     \end{tabular}}
@@ -417,7 +417,7 @@ Users can set this parameter to \code{FALSE} if they wish to exclude the previou
 \end{table}
 
 
-The \code{BMRMM} function returns \colblue{an object of class \code{BMRMM},  which either contains only  \code{results.trans} or both of  \code{results.trans} and \code{results.duration} if duration times follow a mixture gamma distribution.} 
+The \code{BMRMM} function returns an object of class \code{BMRMM},  which either contains only  \code{results.trans} or both of  \code{results.trans} and \code{results.duration} if duration times follow a mixture gamma distribution. 
 For the state transitions, the posterior mean transition probability matrices 
 for each combination of the covariate levels and each individual are given by \code{results.trans\$tp.exgns.post.mean} and \code{results.trans\$tp.anmls.post.mean}, respectively. 
 Additionally, \code{results.trans\$clusters}  stores  cluster configurations for each covariate from each MCMC iteration. 
@@ -428,24 +428,24 @@ Meanwhile, \code{results.duration\$comp.assignment} gives the assignment of the 
 Similar to transition probabilities, \code{results.duration\$clusters} gives the cluster configurations of the covariates. 
 Other elements of \code{results.trans} and \code{results.duration} can be found in the detailed R function description. 
 
-\subsection{\colblue{Summarizing BMRMM results}}
+\subsection{Summarizing BMRMM results}
 
-\colblue{The \pkg{BMRMM} package provides an S3 method for summarizing results of a \code{BMRMM} object as follows. }
+The \pkg{BMRMM} package provides an S3 method for summarizing results of a \code{BMRMM} object as follows. 
 
 \begin{example}
 summary.BMRMM(object, delta = 0.02, digits = 2, ...)
 \end{example}
 
-\colblue{The \code{object} must be of class \code{BMRMM}.  
+The \code{object} must be of class \code{BMRMM}.  
 The argument \code{delta} is associated with local tests for transition probabilities, which we will explain further. 
 The \code{digit} parameter is an integer used for number formatting, as in the general \code{summary} function.  
-The \code{summary.BMRMM} function returns an object of class \code{BMRMMsummary} with the following fields. }
+The \code{summary.BMRMM} function returns an object of class \code{BMRMMsummary} with the following fields. 
 
 \begin{itemize}
 \item \code{trans.global} and \code{dur.global}
 
-\colblue{These two fields give the global test results from the inference of transition probabilities and duration times. 
-Global tests show the significance of the covariates in affecting the state transitions and {duration times}. } 
+These two fields give the global test results from the inference of transition probabilities and duration times. 
+Global tests show the significance of the covariates in affecting the state transitions and {duration times}.  
 Specifically, for each covariate,  the empirical distribution of the size of the clusters in the stored MCMC iterations is calculated. 
 The null hypothesis that a covariate is not important is equivalent to the event that all its levels are in the same cluster, or, in other words, that the cluster size for the covariate is just one.
 
@@ -455,11 +455,11 @@ The two fields provide the mean and standard deviation for the posterior mean of
 
 \item \code{trans.local.mean.diff} and \code{trans.local.null.test}
 
-\colblue{The \code{BMRMMsummary} object also contains local test results for transition probabilities. 
-Local tests analyze the differences between the transition probabilities associated with two different levels of a covariate $j$,  fixing the levels of the other covariates.} 
+The \code{BMRMMsummary} object also contains local test results for transition probabilities. 
+Local tests analyze the differences between the transition probabilities associated with two different levels of a covariate $j$,  fixing the levels of the other covariates. 
 For every pair of levels of covariate $j$,  \code{trans.local.mean.diff} gives the absolute differences in transition probabilities for each transition type in the MCMC iterations.
 The local null hypothesis we test for each transition type is that this difference is at least the pre-specified value \code{delta}.
-\colblue{Meanwhile, \code{trans.local.null.test} gives the probability of the null hypothesis that the difference between two covariate levels is not significant under each transition type. }
+Meanwhile, \code{trans.local.null.test} gives the probability of the null hypothesis that the difference between two covariate levels is not significant under each transition type. 
 
 \item \code{dur.mix.params} and \code{dur.mix.probs}
 
@@ -469,18 +469,18 @@ For each mixture component,  \code{dur.mix.params} provides the estimates of the
  
 
 
-\subsection{\colblue{Visualizing results with BMRMM plotting functions}}
+\subsection{Visualizing results with BMRMM plotting functions}
 
-\colblue{The main plotting function of the package, \code{plot.BMRMMsummary}, is an S3 method  for class \code{BMRMMsummary}.  
+The main plotting function of the package, \code{plot.BMRMMsummary}, is an S3 method  for class \code{BMRMMsummary}.  
 It gives the barplots for global tests as well as heatmaps for the posterior mean and standard deviation for transition probabilities, local tests for transition probabilities,  mixture parameters and probabilities for duration times. 
 The parameters of \code{plot.BMRMMsummary} include \code{x}, which must be an object of class \code{BMRMMsummary} and \code{type}, which is a single string representing the field of \code{x} that needs to be plotted. 
-The function also takes general plotting arguments such as \code{xlab}, \code{ylab}, etc.  } 
+The function also takes general plotting arguments such as \code{xlab}, \code{ylab}, etc.   
 
 \begin{example}
 plot.BMRMMsummary(x, type, xlab = NULL, ylab = NULL, main = NULL, col = NULL, ...)
 \end{example}
 
-\colblue{When duration times are analyzed as continuous variables using mixture gamma distributions, 
+When duration times are analyzed as continuous variables using mixture gamma distributions, 
 the users can use the S3 method  \code{hist.BMRMM} to generate histograms for duration times along with the estimated posterior distribution.
 The parameter \code{x} is an object of class \code{BMRMM}. 
 The argument \code{comp} gives the specific mixture component that the user would like to investigate. 
@@ -488,7 +488,7 @@ When \code{comp} is \code{NULL}, which is the default setting,  the histogram of
 When \code{comp} is a specific integer,  we will be looking at the last MCMC iteration. 
 The histogram for duration times assigned with component \code{comp} will be presented alongside the mixture gamma distribution with the shape and rate parameters from the last MCMC iteration. 
 Users can refer to the documentation of the general \code{hist} function to see the interpretation for the rest of the parameters. 
-}
+
 
 \begin{example}
 hist.BMRMM(x, comp = NULL, xlim = NULL, breaks = NULL, main = NULL, 
@@ -496,25 +496,25 @@ hist.BMRMM(x, comp = NULL, xlim = NULL, breaks = NULL, main = NULL,
 \end{example}
 
 
-\colblue{Finally,  users can check the MCMC diagnostics with the traceplots and autocorrelation plots produced by the function \code{diag.BMRMM}.
+Finally,  users can check the MCMC diagnostics with the traceplots and autocorrelation plots produced by the function \code{diag.BMRMM}.
 The \code{object} parameter should be an object of class \code{BMRMM}. 
 For  transition probabilities,  users can specify the covariate levels as well as the state transitions they are interested in by defining \code{cov.combs} and \code{transitions}, respectively. 
 For duration times, 
-users can define  \code{components}, a numeric vector,  to obtain the diagnostic plots for shape and rate parameters of the specific component kernels.} 
+users can define  \code{components}, a numeric vector,  to obtain the diagnostic plots for shape and rate parameters of the specific component kernels. 
 
 \begin{example}
 diag.BMRMM(object, cov.combs = NULL, transitions = NULL, components = NULL) 
 \end{example}
 
-\subsection{\colblue{Model selection scores for continuous duration times}}
+\subsection{Model selection scores for continuous duration times}
 When the {duration times} are modeled using mixtures of gamma distributions, model selection can be performed on the number of mixture components using the function \code{model.selection.scores}.
 
 \begin{example}
 model.selection.scores(object) 
 \end{example}
 
-\colblue{The function takes an \code{object} as its input, which must be an object of class \code{BMRMM}. 
-It returns a list consisting of} the log pseudo marginal likelihood (LPML)  \citep{geisser1979predictive} and the widely applicable information criterion (WAIC) \citep{watanabe2010asymptotic} scores of the model.  
+The function takes an \code{object} as its input, which must be an object of class \code{BMRMM}. 
+It returns a list consisting of the log pseudo marginal likelihood (LPML)  \citep{geisser1979predictive} and the widely applicable information criterion (WAIC) \citep{watanabe2010asymptotic} scores of the model.  
 Larger values of LPML and smaller values of WAIC indicate better model fits.
 They are particularly suitable for complex Bayesian hierarchical models as they can be easily computed from the MCMC samples. 
 
@@ -528,12 +528,12 @@ The mice sang under three social contexts, $U$ (fresh female urine on a cotton t
 Each song comprises a sequence of syllables and continuous inter-syllable intervals (ISIs).
 The data set can be used to analyze the effect of the FoxP2 gene on the vocal syntax of mice, 
 in turn providing insights into the effects of the gene on human vocal communication abilities and related deficiencies.
-\colblue{The real FoxP2 data set originates from the study by \cite{Chabout_etal:2016} and requires permission to use. 
+The real FoxP2 data set originates from the study by \cite{Chabout_etal:2016} and requires permission to use. 
 \cite{wu2021bayesian} simulated a data set that closely mimics the real one.
 For demonstrating the \pkg{BMRMM} package, we included in it a shortened version of this synthetic data set 
 which we refer to as the \code{foxp2} data set. 
 %In the \pkg{BMRMM} package, this shortened synthetic FoxP2 data set is given the name \code{foxp2}.
-} 
+ 
 The \code{foxp2} synthetic data set has $17391$ rows and $6$ columns, which are Id, Genotype, Context, Prev\_State, Cur\_State, and Transformed\_ISI. 
 The original FoxP2 data set records ISIs in seconds. 
 In the simulated data set \code{foxp2}, following \citet{wu2021bayesian}, log(1+ISI) values are used which give a better model fit. 
@@ -599,9 +599,9 @@ In what follows, we show the results for the last function call.
 The returned \code{res.fp2} have two parts, which are named  \code{res.fp2\$results.trans} and \code{res.fp2\$results.duration}.
 Now we demonstrate how we print and visualize the results.  
 
-\colblue{First, we obtain a \code{BMRMMsummary} object, \code{sm.fp2},  by calling the \code{summary.BMRMM} function on the returned results \code{res.fp2}.
+First, we obtain a \code{BMRMMsummary} object, \code{sm.fp2},  by calling the \code{summary.BMRMM} function on the returned results \code{res.fp2}.
 The global test results for  identifying the significant covariates can be found by calling the fields \code{trans.global} and \code{dur.global}.
-The function \code{plot.BMRMMsummary} is called to  visualize the global tests using barplots, as presented  in Figure~\ref{fig:global}. } 
+The function \code{plot.BMRMMsummary} is called to  visualize the global tests using barplots, as presented  in Figure~\ref{fig:global}.  
 {We recall that a covariate is significant when its levels formed more than one cluster with very high posterior probability (the bar heights). 
 Figure~\ref{fig:global} and the printed results suggest that every covariate is significant for the ISIs but only the social context is significant for the transition probabilities. }
 
@@ -632,12 +632,12 @@ R> plot(sm.fp2, 'dur.global')
 \qquad
 \subfloat{
 \includegraphics[width=0.44\textwidth]{figs/global_isi_foxp2.pdf}}
-\caption{Results for the \colblue{simulated \code{foxp2}} data set showing the global tests of significance of the covariates for the state transitions (left) and the ISIs (right).
+\caption{Results for the simulated \code{foxp2} data set showing the global tests of significance of the covariates for the state transitions (left) and the ISIs (right).
 The bars represent the estimated posterior probabilities of the number of clusters formed by the levels of each covariate.}
 \label{fig:global}
 \end{figure}
 
-\colblue{The plotting function can be called to visualize the posterior transition probabilities under different combinations of the covariate levels. }
+The plotting function can be called to visualize the posterior transition probabilities under different combinations of the covariate levels. 
 We show in Figure~\ref{fig:post_mean} the heatmaps for the posterior mean and standard deviation of the transition probabilities for each transition type for the following combinations of covariates: $(F,A)$ and $(W,L)$.
 
 \begin{example}
@@ -653,7 +653,7 @@ R> plot(sm.fp2, 'trans.probs.sd')
 \subfloat{
 \includegraphics[width=.91\textwidth]{figs/post_mean_WL.pdf}
 \label{fig:post_mean_WL}}\\
-\caption{Results for the  \colblue{simulated \code{foxp2}} data set showing the posterior mean and standard deviation for each transition type for selected covariate combinations, $(F,A)$ (top) and $(W,L)$ (bottom).
+\caption{Results for the  simulated \code{foxp2} data set showing the posterior mean and standard deviation for each transition type for selected covariate combinations, $(F,A)$ (top) and $(W,L)$ (bottom).
  }
 \label{fig:post_mean}
 \end{figure}
@@ -661,8 +661,8 @@ R> plot(sm.fp2, 'trans.probs.sd')
 We also perform the local test  to assess the influence of genotype on the transition probabilities by computing the absolute difference of the transition probabilities between $F$ and $W$ among the thinned MCMC samples after burn-ins, i.e., $|\Delta \lambda_{trans,\cdot,x_2}(y_t\mid y_{t-1})|=|\lambda_{trans,1,x_2}(y_t\mid y_{t-1})-\lambda_{trans,2,x_2}(y_t\mid y_{t-1})|$. 
 The estimated posterior probability for the null hypothesis is therefore the proportion of times $|\Delta \lambda_{trans,\cdot,x_2}(y_t\mid y_{t-1}) \le \delta|$ is observed in the MCMC samples, 
 where $x_2$ is the social context and $\delta$ is the user-specific difference threshold \code{delta}. 
-\colblue{The plotting function \code{plot.BMRMMsummary} gives the plots for all local test results if we set the \code{type} to be \code{`trans.local.mean.diff'} or \code{`trans.local.null.test'}. 
-Here, we show the results of local tests for the covariate 1 (i.e., genotype) with \code{delta} equaling the default value of 0.02, and present  the plots in Figure~\ref{fig:local}.}
+The plotting function \code{plot.BMRMMsummary} gives the plots for all local test results if we set the \code{type} to be \code{`trans.local.mean.diff'} or \code{`trans.local.null.test'}. 
+Here, we show the results of local tests for the covariate 1 (i.e., genotype) with \code{delta} equaling the default value of 0.02, and present  the plots in Figure~\ref{fig:local}.
 {From the figure, we see that the posterior probabilities of the null hypotheses are generally large for most transition types (e.g., transitions to the syllable $u$) regardless of the social context, 
 indicating that genotype does not have a strong influence on transition probabilities with a fixed context under these transition types. }
 
@@ -679,7 +679,7 @@ R> plot(sm.fp2, 'trans.local.null.test')
 \includegraphics[width=.88\textwidth]{figs/local_L.pdf}}\\
 \subfloat{
 \includegraphics[width=.88\textwidth]{figs/local_A.pdf}}\\
-\caption{Results for the \colblue{simulated \code{foxp2}} data set showing local test results for genotypes fixing the social context, $U$ (top), $L$ (middle), and $A$ (bottom).
+\caption{Results for the simulated \code{foxp2} data set showing local test results for genotypes fixing the social context, $U$ (top), $L$ (middle), and $A$ (bottom).
 The averaged absolute difference in transition probabilities between $F$ and $W$ is presented on the left.
 The posterior probabilities of the corresponding null hypotheses are on the right.
  }
@@ -709,7 +709,7 @@ R> for(comp in 1:4) {
 \subfloat[Histograms of ISIs for each component of the gamma mixture model along with the component density (red lines) from the last MCMC iteration.]{
 \includegraphics[width=0.46\textwidth]{figs/hist_by_comp.pdf}
 \label{fig:hist_by_comp}}\\
-\caption{Results for the \colblue{simulated \code{foxp2}} data set showing the histograms of the ISIs with the estimated posterior gamma mixture density (left) and the histograms of the ISIs for each mixture component (right). 
+\caption{Results for the simulated \code{foxp2} data set showing the histograms of the ISIs with the estimated posterior gamma mixture density (left) and the histograms of the ISIs for each mixture component (right). 
  }
 \label{fig:hist}
 \end{figure}
@@ -755,7 +755,7 @@ Comp 4 0.24 0.24 0.26 0.23
 
 
 
-{From the mixture probabilities, we see that mice with genotype $F$ have a much higher mixture probability in component 2 compared to genotype $W$, which indicates mice with the FoxP2 mutation require a longer ISI between pronouncing two syllables, a reflection of vocal impairment. }
+From the mixture probabilities, we see that mice with genotype $F$ have a much higher mixture probability in component 2 compared to genotype $W$, which indicates mice with the FoxP2 mutation require a longer ISI between pronouncing two syllables, a reflection of vocal impairment. 
 
 Finally, we check the MCMC diagnostic plots and see if we had good mixing for the parameters. 
 Here we focus on a specific transition type, $u\rightarrow m$, for covariate combination $\{F,U\}$ and a specific mixture component (component 2).
@@ -774,24 +774,24 @@ R> diag.BMRMM(res.fp2, cov.combs = list(c(1, 1)),
 \includegraphics[width=.85\textwidth]{figs/diag_FU_um.pdf}}\\
 \subfloat[For gamma mixture component 2 shape and rate parameters.]{
 \includegraphics[width=\textwidth]{figs/diag_isi_comp2.pdf}}\\
-\caption{Results for the \colblue{simulated \code{foxp2}} data set showing the MCMC diagnostic plots, including traceplots and autocorrelation plots. }
+\caption{Results for the simulated \code{foxp2} data set showing the MCMC diagnostic plots, including traceplots and autocorrelation plots. }
 \label{fig:diag}
 \end{figure}
 
 
 
 \section{Illustrations on the asthma control data set}\label{sec:asthma}
-{The \pkg{BMRMM} package is able to analyze duration times in detail which could either be the ISIs, as seen in the synthetic \code{foxp2} data set, or the state persistence times, as in a traditional semi-Markov model. 
+The \pkg{BMRMM} package is able to analyze duration times in detail which could either be the ISIs, as seen in the synthetic \code{foxp2} data set, or the state persistence times, as in a traditional semi-Markov model. 
 To demonstrate the usage of our package in analyzing the state persistence times, we use the asthma control data set from the ARIA (Association pour la Recherche en Intelligence Artificielle) study of  severe asthmatic patients \citep{combescure2003assessment} in France between 1997 and 2001. 
 At each visit, a chest physician graded the asthma control status of the patient using control scores \citep{juniper1999development}.  
 The data set contains the sojourn time of the control states as well as three  covariates: Asthma severity, sex, and the body mass index (BMI) of the patients. 
 \citet{saint2003analysis} used a Markov model with piece-wise constant intensities to model the asthma control evolution and proposed a regression model for analyzing the effect of covariates.
 \citet{combescure2003assessment} used the data set to assess the relationship between asthma severity and control of asthma.
 \citet{listwon2015semimarkov} fitted a semi-Markov model for the sojourn times using exponential and Weibull distributions and analyzed the effect of covariates individually due to complexity. 
-Our \pkg{BMRMM} package is able to analyze the effect of the three covariates while also incorporating random individual effects exhibited by different patients on transition dynamics and state duration times. }
+Our \pkg{BMRMM} package is able to analyze the effect of the three covariates while also incorporating random individual effects exhibited by different patients on transition dynamics and state duration times. 
 
-\colblue{The \code{asthma} data set we use here is from the \pkg{SemiMarkov} package \citep{listwon2015semimarkov}.
-We have renamed and reordered the columns such that the data set fits the required format.}
+The \code{asthma} data set we use here is from the \pkg{SemiMarkov} package \citep{listwon2015semimarkov}.
+We have renamed and reordered the columns such that the data set fits the required format.
 Specifically, the data set has $928$ rows, recording the asthma control states of $371$ patients, which is one of the following three transient states:  Optimal control (State 1), sub-optimal control (State 2), and unacceptable control (State 3). 
 Each state can transit to any other two states and the state duration times are recorded. 
 The data set also contains three binary covariates of the asthma patients, including the disease severity (1 if mild-moderate and 2 if severe), BMI (body mass index, 1 if BMI $<25$ and 2 otherwise), and sex (1 if women and 2 if men). 
@@ -1009,13 +1009,13 @@ simultaneously selecting the significant covariates separately for the state tra
 The package also provides a series of plotting functions for visualizing the results of the analyses, 
 including various global and local hypotheses tests, MCMC diagnostics, etc. 
 We are committed to maintaining and further developing the package in the future. 
-\colblue{Future improvements to the package may include more options for the distribution types of transition probabilities and duration times beyond the currently available mixture Dirichlet and mixture gamma distributions, respectively.}  
+Future improvements to the package may include more options for the distribution types of transition probabilities and duration times beyond the currently available mixture Dirichlet and mixture gamma distributions, respectively.  
 
 
 
-\colblue{\section{Acknowledgements} \label{sec:ack}
+\section{Acknowledgements} \label{sec:ack}
 We thank two anonymous reviewers very much for their careful review of our work 
-and their constructive comments that led to significant improvements to both the package and this paper.} 
+and their constructive comments that led to significant improvements to both the package and this paper. 
 
 
 
